# finance_planner_cli

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  pytest.ini
cli/: main.py
cli/commands/: accounts.py  auth.py  env.py  tenants.py  transactions.py
cli/config/: paths.py  settings.py
cli/models/: schemas.py
cli/services/: auth_client.py  env_validator.py  finance_client.py  token_manager.py
cli/utils/: console.py  errors.py
docs/: COMMANDS.md  TESTING.md  TUTORIAL.md  USER_MANUAL.md  transactions.csv
tests/: conftest.py
tests/integration/: test_accounts_workflow.py  test_auth_workflow.py
tests/unit/: test_auth_client.py  test_finance_client.py  test_token_manager.py  test_transaction_client.py
